vdpsink: fix Memory leak due to Xlib API usage

https://bugzilla.gnome.org/show_bug.cgi?id=773932