sys/vdpau/gstvdpsink.c
@@ -155,8 +155,10 @@ gst_vdp_sink_window_set_title (VdpSink * vdp_sink,
 
       if (title) {
         if ((XStringListToTextProperty (((char **) &title), 1,
-                    &xproperty)) != 0)
+                    &xproperty)) != 0) {
           XSetWMName (vdp_sink->device->display, window->win, &xproperty);
+          XFree (xproperty.value);
+	}
 
         g_free (title_mem);
       }
